--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
     "    count = 0\n",
     "    for x in list_in:\n",
     "        print(x)\n",
-    "        listx = x.capitalize()\n",
+    "        list_in[countx = x.capitalize()\n",
     "        \n",
     "    return(travel_destinations)"
    ]
