Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,12 +241,12 @@
     "        list_in[count] = x.capitalize()\n",
     "        count +=1\n",
     "        \n",
-    "    return(travel_destinations)"
+    "    return(list_in)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -264,10 +264,10 @@
     {
      "data": {
       "text/plain": [
-       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
+       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
