--- a/index.ipynb
+++ b/index.ipynb
@@ -239,6 +239,7 @@
     "    for x in list_in:\n",
     "        print(x)\n",
     "        list_in[count] = x.capitalize()\n",
+    "        print\n",
     "        count +=1\n",
     "        \n",
     "    return(list_in)"
