Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
     "    for x in list_in:\n",
     "        print(x)\n",
     "        list_in[count] = x.capitalize()\n",
-    "        print\n",
+    "        print(list_in[count])\n",
     "        count +=1\n",
     "        \n",
     "    return(list_in)"
