--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination()\n",
-    "    \n",
+    "    travel_destination.append\n",
     "    travel_destinations[-1] # 'madagascar'"
    ]
   },
