Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -211,21 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-17-e5d67662b446>, line 2)",
+     "evalue": "EOL while scanning string literal (<ipython-input-18-cb787b2b326a>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-e5d67662b446>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def favorite_destination()\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-cb787b2b326a>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    travel_destination.append(madagascar')\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def favorite_destination()\n",
+    "def favorite_destination():\n",
     "    travel_destination.append(madagascar')\n",
     "    travel_destinations[-1] # 'madagascar'"
    ]
