--- a/index.ipynb
+++ b/index.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -152,14 +152,14 @@
        "'finland'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "travel_destinations = ['finland', 'canada', 'croatia']\n",
-    "next_up(travel_destinations) # 'finland'"
+    "next_up(travel_destinations) # 'finland'\n"
    ]
   },
   {
