Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -192,14 +192,13 @@
        "'madagascar'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bob = favorite_destination(travel_destinations) # 'madagascar'\n",
-    "bob"
+    "favorite_destination(travel_destinations) # 'madagascar'"
    ]
   },
   {
