--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def favorite_destination():\n",
+    "def favorite_destination(list):\n",
     "    travel_destination.append(madagascar')\n",
     "    travel_destinations[-1] # 'madagascar'"
    ]
