Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination(list_in):\n",
     "    travel_destination.append(madagascar')\n",
-    "    travel_destinations[-1] # 'madagascar'"
+    "    list_in.append('madagascar')\n",
+    "    return('madagascar')"
    ]
   },
   {
