--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "favor"
+   ]
   },
   {
    "cell_type": "markdown",
