Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination(list_in):\n",
     "    list_in.append('madagascar')\n",
-    "    return('madagascar')"
+    "    return(lia)"
    ]
   },
   {
