--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
     "def capitalize_countries(list_in):\n",
     "    count = 0\n",
     "    for x in list_in:\n",
-    "        print(x)\n",
+    "        #print(x)\n",
     "        list_in[count] = x.capitalize()\n",
     "        print(list_in[count])\n",
     "        count +=1\n",
@@ -267,24 +267,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "argentina\n",
       "Argentina\n",
-      "mexico\n",
       "Mexico\n",
-      "italy\n",
       "Italy\n",
-      "finland\n",
       "Finland\n",
-      "canada\n",
       "Canada\n",
-      "croatia\n",
       "Croatia\n"
      ]
     },
@@ -294,7 +288,7 @@
        "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
