--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def capitalize_countries(list_in):\n",
+    "def capitalize_countries(travel_destinations):\n",
     "    count = 0\n",
     "    for x in list_in:\n",
     "        #print(x)\n",
