--- a/index.ipynb
+++ b/index.ipynb
@@ -256,13 +256,13 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries(travel_destinations):\n",
     "    count = 0\n",
-    "    for x in list_in:\n",
+    "    for x in travel_destinations:\n",
     "        #print(x)\n",
-    "        list_in[count] = x.capitalize()\n",
-    "        print(list_in[count])\n",
+    "        travel_destinations[count] = x.capitalize()\n",
+    "        print(travel_destinations[count])\n",
     "        count +=1\n",
     "        \n",
-    "    return(list_in)"
+    "    return(travel_destinations)"
    ]
   },
   {
