Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,15 +254,15 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def capitalize_countries():\n",
+    "def capitalize_countries(list_in):\n",
     "    count = 0\n",
-    "    for x in travel_destinations:\n",
+    "    for x in list_in:\n",
     "        #print(x)\n",
-    "        travel_destinations[count] = x.capitalize()\n",
-    "        print(travel_destinations[count])\n",
+    "        list_in[count] = x.capitalize()\n",
+    "        print(list_in[count])\n",
     "        count +=1\n",
     "        \n",
-    "    return(travel_destinations)"
+    "    return(list_in)"
    ]
   },
   {
