Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -171,12 +171,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def favorite_destination(list_in):\n",
+    "def favorite_destination():\n",
     "    list_in.append('madagascar')\n",
     "    return('madagascar')"
    ]
@@ -198,7 +198,7 @@
     }
    ],
    "source": [
-    "favorite_destination(travel_destinations) # 'madagascar'"
+    "favorite_destination() # 'madagascar'"
    ]
   },
   {
