Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,8 +216,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination(list_in):\n",
-    "    list_in.append('madagascar')\n",
-    "    return(list_in[-1])"
+    "    travel_destinations.append('madagascar')\n",
+    "    return(travel_destinations[-1])"
    ]
   },
   {
